# pallo

./: Cargo.toml  LICENSE.md  README.md  rustfmt.toml
crates/pallo/: Cargo.toml
crates/pallo/src/: animation.rs  baseview.rs  color.rs  component.rs  context.rs  event.rs  file_dialog.rs  geometry.rs  layer.rs  layout.rs  lib.rs  properties.rs  signal.rs  svg.rs  tree.rs  ui.rs  utils.rs
crates/pallo/src/components/: label.rs  mod.rs  paragraph.rs  scroll.rs
crates/pallo/src/platform/: macos.rs  mod.rs  web.rs  web_platform.js  windows.rs
crates/pallo/src/platform/ios/: file_picker.rs  mod.rs
crates/pallo/src/renderers/: canvaskit.rs  mod.rs  skia.rs  test.rs
crates/pallo_macro/: Cargo.toml
crates/pallo_macro/src/: lib.rs
crates/pallo_util/: Cargo.toml
crates/pallo_util/src/: lib.rs
