[package]
name = "pallo-util"
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Max Huttunen"]

[dependencies]
serde = { version = "1.0", features = ["rc"] }

[target.'cfg(any(target_family = "wasm"))'.dependencies]
wasm-bindgen = "0.2.108"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies]
objc2-foundation = "0.3.0"